Fix compilation error